tests/errors/compiler/unassignable_inc/++_to_float.c
int main()
{
	//int arr[2] = {1.1,2};
	float i;
	i = 10++;
	return 0;
}